syntax = "proto3";

option java_package = "com.betting.transaction.common";
option java_multiple_files = true;

service Balance{
  rpc BalanceUpdate (BalanceUpdateRequest) returns (BalanceUpdateResponse);
}

message BalanceUpdateRequest{
  int32 userId = 1;
  string amount = 2;
  string action = 3;
}

message BalanceUpdateResponse{
  string message = 1;
}